[gd_scene load_steps=7 format=3 uid="uid://cniigegfqe6gd"]

[ext_resource type="Theme" uid="uid://bendw5xf587ml" path="res://Themes/PhoneUI.tres" id="1_okrui"]
[ext_resource type="Script" path="res://Scenes/User Interface/RegisterTable/GameRegister.gd" id="1_yv46e"]
[ext_resource type="Texture2D" uid="uid://c1v5wx2t3moax" path="res://Assets/User Interface/NewFrame.png" id="3_rv0qj"]
[ext_resource type="Theme" uid="uid://ckmygpxkilnmg" path="res://Themes/Button-input.tres" id="4_4soxf"]
[ext_resource type="PackedScene" uid="uid://b6rjmifbj26hf" path="res://Scenes/Control/button_sound_effect.tscn" id="5_gx3no"]
[ext_resource type="PackedScene" uid="uid://i7puu6t5dkye" path="res://Scenes/User Interface/xbutton.tscn" id="5_wlt0e"]

[node name="GameRegister" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -384.0
offset_right = 268.0
offset_bottom = -32.0
grow_vertical = 2
theme = ExtResource("1_okrui")
script = ExtResource("1_yv46e")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rv0qj")
region_rect = Rect2(4, 6, 505, 501)
patch_margin_left = 69
patch_margin_top = 63
patch_margin_right = 73
patch_margin_bottom = 65

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
text = "Konter
"
fit_content = true
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Items" type="VBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="DeviceName" type="RichTextLabel" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items"]
layout_mode = 2
text = "Perangkat: "
fit_content = true
scroll_active = false

[node name="DeviceKendala" type="RichTextLabel" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items"]
layout_mode = 2
text = "Kendala:"
fit_content = true
scroll_active = false

[node name="Label" type="RichTextLabel" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items"]
layout_mode = 2
text = " "
fit_content = true
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items"]
layout_mode = 2
text = "Set Harga:"
fit_content = true
scroll_active = false

[node name="HargaInput" type="SpinBox" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items"]
layout_mode = 2
max_value = 1e+06
step = 1000.0
rounded = true
custom_arrow_step = 25000.0

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items"]
layout_mode = 2
alignment = 2

[node name="ButtonTolak" type="Button" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_4soxf")
text = "Tolak"

[node name="ButtonSoundEffect" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items/HBoxContainer/ButtonTolak" instance=ExtResource("5_gx3no")]
hover_sound_effect = true

[node name="ButtonTerima" type="Button" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_4soxf")
text = "Terima"

[node name="ButtonSoundEffect" parent="NinePatchRect/ScrollContainer/VBoxContainer/Items/HBoxContainer/ButtonTerima" instance=ExtResource("5_gx3no")]
hover_sound_effect = true

[node name="Button" parent="NinePatchRect" instance=ExtResource("5_wlt0e")]
layout_mode = 0
offset_left = 188.0
offset_top = 21.0
offset_right = 220.0
offset_bottom = 53.0
